--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.19.2",
     "js-yaml": "^4.1.0",
     "mongoose": "^8.2.3",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
